--- a/html/include/cloudplugin.html
+++ b/html/include/cloudplugin.html
@@ -1,6 +1,7 @@
 <div class="cloud-plugin available-plugin js-available-effect" mod-role="cloud-plugin" mod-plugin-id="{{id}}">
     <figure class="thumb">
-        <img src="img/px.gif" style="background: url({{screenshot_href}}) center top no-repeat;">
+        <img src="{{screenshot_href}}" />
+        <div></div>
     </figure>
     <div class="col-sm-8">
         <div class="description">
