More cloud plugin work, removal almost working

--- a/html/include/cloudplugin_info.html
+++ b/html/include/cloudplugin_info.html
@@ -10,7 +10,7 @@
                 <div class="plugin-description">
                     <header>
                         <h1>{{name}}</h1>
-                        <p><br />Categories: <em>{{category}}</em></p>
+                        <p><br />Category: <em>{{category}}</em></p>
                         <p class="version">
                             <span class="js-latest-version">Latest Version: <span class="bold">{{latest_version}}</span></span>
                             <br/>
