Very minor plugininfo dialog changes

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -175,7 +175,7 @@ hr.dotted {
     content: "\00d7";
     font-size: 14px;
     font-weight: bold;
-  }  
+  }
   background: #333;
   border-radius: 12px;
   color: #fff;
@@ -394,7 +394,7 @@ hr.dotted {
       margin-left: 1em;
       color: white;
     }
-  
+
   #mod-bluetooth {
     background-image: url(../img/menu-icons-sprite.png);
     background-position: -225px bottom;
@@ -561,7 +561,7 @@ hr.dotted {
     }
     .control-group {
       position: relative;
-    }    
+    }
   }
   ul {
     list-style: none;
@@ -627,7 +627,7 @@ hr.dotted {
       position: relative;
     }
     .plugins-wrapper .plugin {
-      color: #fff;      
+      color: #fff;
       float: left;
       font-size: 11px;
       font-weight: bold;
@@ -845,6 +845,7 @@ hr.dotted {
       background: #333;
       color: #fff;
       border-color: #333;
+      text-align: center;
     }
     th:first-child {
       border-radius: 4px 0 0 0;
