--- a/html/include/cloudplugin_info.html
+++ b/html/include/cloudplugin_info.html
@@ -31,7 +31,7 @@
                     </tr>
                     {{#ports.control.input}}
                     <tr>
-                        <td>{{name}}</td>
+                        <td>{{shortName}}</td>
                         <td>{{ranges.default}}</td>
                         <td>{{ranges.minimum}}</td>
                         <td>{{ranges.maximum}}</td>
