--- a/html/include/bank_pedalboard.html
+++ b/html/include/bank_pedalboard.html
@@ -2,7 +2,7 @@
     <div class="pedalboard clearfix">
         <div class="info clearfix">
             <span class="title js-title alignleft">{{title}}</span>
-            <span class="js-remove hidden alignright btn btn-mini btn-danger">Remove</span>
+            <span class="js-remove remove {{remove}}" title="remove pedalboard"></span>
         </div>
         <div class="img">
             <img src="{{image}}"/>
