Quick code for RAM graph

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -356,7 +356,7 @@ hr.dotted {
       color: #fff;
     }
   }
-  #mod-cpu {
+  #mod-cpu, #mod-ram {
     border-color: #2b2b2b;
     border-style: solid;
     border-width: 0 0 0 1px;
