--- a/html/css/main-preLess.css
+++ b/html/css/main-preLess.css
@@ -48,7 +48,7 @@ body {
     background-color:rgba(0,0,0,0.3);
     height:90%;
     margin:1px;
-}   
+}
 
 /* = MAIN MENU (FOOTER)
 ================================================ */
@@ -80,7 +80,7 @@ body {
 
 #main-menu > div.icon.selected {
     background:#000;
-} 
+}
 
 #main-menu > div.icon > a {
     display:block;
@@ -189,7 +189,7 @@ body {
     color:#fff;
 }
 /* MOD - CPU */
-#main-menu #mod-cpu {
+#main-menu #mod-cpu, #main-menu #mod-ram {
     border-color:#2b2b2b;
     border-style:solid;
     border-width:0 0 0 1px;
@@ -203,7 +203,7 @@ body {
     text-transform:uppercase;
     width:100px;
 }
-#main-menu #mod-cpu .progress{
+#main-menu #mod-cpu .progress, #main-menu #mod-ram .progress{
     height: 45px;
     margin-bottom: 0;
     overflow: hidden;
@@ -218,12 +218,12 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', end
     -moz-border-radius: 4px;
     border-radius: 0 !important;
 }
-    #main-menu #mod-cpu .progress .bar{
+    #main-menu #mod-cpu .progress .bar, #main-menu #mod-ram .progress .bar{
         float: right;
         background: #222 !important
     }
 
-#main-menu #mod-cpu .progress-title{
+#main-menu #mod-cpu .progress-title, #main-menu #mod-ram .progress-title{
     position: absolute;
     top: 0;
     height: 45px;
@@ -284,11 +284,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', end
     border-left:9px solid transparent;
     border-right:9px solid transparent;
     border-top:9px solid white;
-    height:0; 
+    height:0;
     position:absolute;
     bottom:-18px;
     right:14px;
-    width:0; 
+    width:0;
 }
 
 
@@ -339,7 +339,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', end
     height:26px;
 }
 #plugins-library .fold,
-#plugins-library .folded { 
+#plugins-library .folded {
     cursor:pointer;
     display:block;
     float:right;
@@ -551,7 +551,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', end
     line-height:1.25;
 }
 /* Effect Rating */
-#plugins-library #plugins-list .plugins-wrapper .plugin .rating { 
+#plugins-library #plugins-list .plugins-wrapper .plugin .rating {
     background-image:url(../img/icn-rating.png);
     background-position:center top;
     background-repeat:no-repeat;
