--- a/html/css/main.css
+++ b/html/css/main.css
@@ -7010,7 +7010,7 @@ hr.dotted {
   background-color: #000;
   color: #fff;
 }
-#main-menu #mod-cpu {
+#main-menu #mod-cpu, #main-menu #mod-ram {
   border-color: #2b2b2b;
   border-style: solid;
   border-width: 0 0 0 1px;
