--- a/html/css/less/cloud_plugins.less
+++ b/html/css/less/cloud_plugins.less
@@ -3,7 +3,7 @@
   bottom: 46px;
   left: 0;
   overflow: auto;
-  position: absolute;
+  position: fixed;
   right: 0;
   top: 0px;
   z-index: 2;
@@ -118,6 +118,7 @@
     left: 242px;    
     position: absolute;
     right: 0;
+    min-height: 100%;
     background: #111 !important;
     .plugins-wrapper {
     	width: 100%;
