Add some space between input jacks; Add some debug prints

--- a/html/css/pedals.css
+++ b/html/css/pedals.css
@@ -115,9 +115,7 @@
 .mod-pedal .mod-pedal-input .mod-midi-input,
 .mod-pedal .mod-pedal-input .mod-cv-input {
     position: relative;
-/*
-    margin-top: 10px;
-*/
+    margin-bottom: 13px;
 }
 .mod-pedal .mod-pedal-input .mod-midi-input {
     right: -12px;
@@ -163,9 +161,7 @@
 .mod-pedal .mod-pedal-output .mod-midi-output,
 .mod-pedal .mod-pedal-output .mod-cv-output {
     position: relative;
-/*
-    margin-top: 10px;
-*/
+    margin-bottom: 13px;
 }
 
 /* = PEDAL SETTINGS - Pop Up Window
