another shot at fixing moving background in plugin store

--- a/html/css/less/cloud_plugins.less
+++ b/html/css/less/cloud_plugins.less
@@ -1,5 +1,5 @@
 #cloud-plugins-library {
-  background: url(@wallpaper) repeat fixed;
+  background-color: #333;
   bottom: 46px;
   left: 0;
   overflow: auto;
@@ -41,6 +41,7 @@
     }
   }
   .filter {
+    background: url(@wallpaper) repeat fixed;
     border-color: #111;
     border-style: dotted;
     border-width: 0 1px 0 0;
