--- a/html/css/less/banks.less
+++ b/html/css/less/banks.less
@@ -331,7 +331,15 @@ header {
     text-align: center;
   }
 }
-
+#bank-edit {
+  position: absolute;
+  display: block;
+  background-color: #111;
+  height: 100%;
+  width: 80%;
+  bottom: 0;
+  left: 19.95%
+}
 #bank-pedalboards-search {
   h2 {
     text-transform: uppercase;
