--- a/html/css/main.css
+++ b/html/css/main.css
@@ -6702,6 +6702,140 @@ button.close {
   line-height: 1.5;
   overflow: hidden;
 }
+#pedalboards-library {
+  background: url('../img/social/back.png') repeat fixed;
+  bottom: 46px;
+  left: 0;
+  overflow-x: hidden;
+  overflow-y: auto;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 2;
+}
+#pedalboards-library h1 {
+  color: #fff;
+  display: inline-block;
+  font-size: 24px;
+  margin: 0 0 18px 0;
+  padding: 0;
+}
+#pedalboards-library header {
+  background-image: url(../img/header-pattern.png);
+  background-position: center top;
+  background-repeat: no-repeat;
+  display: block;
+  left: 0;
+  padding: 10px 10px 18px 10px;
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: 2;
+  border-bottom: 1px solid #111;
+}
+#pedalboards-library header h1 {
+  font-weight: 2em;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #fff;
+  display: inline-block;
+  font-size: 24px;
+  margin: 0 0 18px 0;
+  padding: 0;
+}
+#pedalboards-library header .help {
+  background-image: url(../img/icn-help-16x16.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+  display: inline-block;
+  height: 21px;
+  width: 21px;
+}
+#pedalboards-library header .close {
+  opacity: 1;
+  position: absolute;
+  right: 10px;
+  top: 16px;
+}
+#pedalboards-library .filter {
+  border-color: #111;
+  border-style: dotted;
+  border-width: 0 1px 0 0;
+  bottom: 46px;
+  left: 0;
+  padding-top: 18px;
+  position: fixed;
+  right: 0;
+  top: 68px;
+  width: 240px;
+}
+#pedalboards-library .filter .control-group {
+  float: left;
+  margin-right: 9px;
+}
+#pedalboards-library .filter .control-group label {
+  color: #fff;
+  display: inline-block;
+  font-size: 12px;
+  font-weight: bold;
+  width: 165px;
+}
+#pedalboards-library .filter .control-group select {
+  width: 50px;
+}
+#pedalboards-library .pedalboards {
+  left: 252px;
+  position: absolute;
+  right: 10px;
+}
+#pedalboards-library .pedalboards .pedalboard {
+  color: #fff;
+  float: left;
+  margin: 0 0 20px 16px;
+  width: 31%;
+}
+#pedalboards-library .pedalboards .pedalboard .img {
+  background: #2b2b2b;
+  border-radius: 4px;
+  display: block;
+  height: 154px;
+  margin-bottom: 9px;
+  width: 100%;
+  overflow: hidden;
+}
+#pedalboards-library .pedalboards .pedalboard .img img {
+  cursor: pointer;
+  height: auto;
+  width: 100%;
+}
+#pedalboards-library .pedalboards .pedalboard .title {
+  display: block;
+  height: 18px;
+  font-weight: bold;
+  overflow: hidden;
+  position: relative;
+}
+#pedalboards-library .pedalboards .pedalboard .description {
+  display: block;
+  font-size: 12px;
+  height: 36px;
+  line-height: 1.5;
+  overflow: hidden;
+}
+#pedalboards-library .pedalboards .pedalboard .actions {
+  font-size: 11px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+#pedalboards-library .pedalboards .pedalboard .actions > span {
+  cursor: pointer;
+}
+#pedalboards-library .pedalboards .pedalboard .actions > span:hover {
+  text-decoration: underline;
+}
+#pedalboards-library .pedalboards .pedalboard .actions span.duplicate {
+  margin: 0 6px;
+}
 /* Make clicks pass-through */
 #nprogress {
   pointer-events: none;
@@ -7637,128 +7771,6 @@ hr.dotted {
 }
 .plugin-info form.comment-form textarea {
   height: 180px;
-}
-#pedalboards-library {
-  background: #000;
-  bottom: 46px;
-  left: 0;
-  overflow: auto;
-  position: absolute;
-  right: 0;
-  top: 68px;
-  z-index: 2;
-}
-#pedalboards-library h1 {
-  color: #fff;
-  display: inline-block;
-  font-size: 24px;
-  margin: 0 0 18px 0;
-  padding: 0;
-}
-#pedalboards-library header {
-  background-image: url(../img/header-pattern.png);
-  background-position: center top;
-  background-repeat: no-repeat;
-  display: block;
-  left: 0;
-  padding: 10px 10px 18px 10px;
-  position: fixed;
-  right: 0;
-  top: 0;
-  z-index: 2;
-}
-#pedalboards-library header .help {
-  background-image: url(../img/icn-help-16x16.png);
-  background-position: center center;
-  background-repeat: no-repeat;
-  display: inline-block;
-  height: 21px;
-  width: 21px;
-}
-#pedalboards-library header .close {
-  opacity: 1;
-  position: absolute;
-  right: 10px;
-  top: 16px;
-}
-#pedalboards-library .filter {
-  border-color: #111;
-  border-style: dotted;
-  border-width: 0 1px 0 0;
-  bottom: 46px;
-  left: 0;
-  padding-top: 18px;
-  position: fixed;
-  right: 0;
-  top: 68px;
-  width: 240px;
-}
-#pedalboards-library .filter .control-group {
-  float: left;
-  margin-right: 9px;
-}
-#pedalboards-library .filter .control-group label {
-  color: #fff;
-  display: inline-block;
-  font-size: 12px;
-  font-weight: bold;
-  width: 165px;
-}
-#pedalboards-library .filter .control-group select {
-  width: 50px;
-}
-#pedalboards-library .pedalboards {
-  left: 252px;
-  position: absolute;
-  right: 10px;
-}
-#pedalboards-library .pedalboards .pedalboard {
-  color: #fff;
-  float: left;
-  margin: 0 0 20px 16px;
-  width: 31%;
-}
-#pedalboards-library .pedalboards .pedalboard .img {
-  background: #2b2b2b;
-  border-radius: 4px;
-  display: block;
-  height: 154px;
-  margin-bottom: 9px;
-  width: 100%;
-  overflow: hidden;
-}
-#pedalboards-library .pedalboards .pedalboard .img img {
-  cursor: pointer;
-  height: auto;
-  width: 100%;
-}
-#pedalboards-library .pedalboards .pedalboard .title {
-  display: block;
-  height: 18px;
-  font-weight: bold;
-  overflow: hidden;
-  position: relative;
-}
-#pedalboards-library .pedalboards .pedalboard .description {
-  display: block;
-  font-size: 12px;
-  height: 36px;
-  line-height: 1.5;
-  overflow: hidden;
-}
-#pedalboards-library .pedalboards .pedalboard .actions {
-  font-size: 11px;
-  font-weight: bold;
-  text-transform: uppercase;
-}
-#pedalboards-library .pedalboards .pedalboard .actions > span {
-  cursor: pointer;
-}
-#pedalboards-library .pedalboards .pedalboard .actions > span:hover {
-  text-decoration: underline;
-}
-#pedalboards-library .pedalboards .pedalboard .actions span.duplicate {
-  margin: 0 6px;
 }
 .clearfix:after,
 .container:after,
